bk_ida/gccida/c2/output_asm_name
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/final.c:3466:1: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
insn_data_0[debug_insn[2].fld[0].rtint].name); 
^~~~~~~~~~~
insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/final.c:3467:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( insn_data_0[rtint].n_alternatives >= 2 ) 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/final.c:3468:33: error: use of undeclared identifier 'off_671883'
fprintf( ( FILE *)asm_out_file, off_671883, ( unsigned int)( which_alternative + 1)); 
                                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/output_asm_name/src/obj/final.o] Error 1
